# nagbot

./: Makefile.am  Makefile.in  README.md  config.h.in  configure.ac
autom4te.cache/: output.0  output.1  traces.0  traces.1
src/: ConfigFile.cpp  ConfigFile.h  Makefile.am  Makefile.in  cmd.h  extern.h  flog.cpp  flog.h  irc.cpp  irc.h  main.cpp  message.h  nagbot.conf  nagbot.cpp  nagbot.h  parser.cpp  parser.h  socket.cpp  socket.h
src/include/: ircraw.h
